--- a/style.css
+++ b/style.css
@@ -9,3 +9,11 @@ body {
     width: 100vw;
     height: 100vh;
 }
+
+.grid-item {
+    width: calc(100% / 16);
+    height: calc(100% / 16);
+    box-sizing: border-box;
+    border: 1px solid white;
+    background-color: lightgray
+}
