--- a/style.css
+++ b/style.css
@@ -17,4 +17,5 @@ body {
     box-sizing: border-box;
     border: 1px solid white;
     background-color: lightgray;
+    transition: background-color 0.2s ease;
 }
