--- a/style.css
+++ b/style.css
@@ -1,33 +1,9 @@
 body {
-    margin: 0;
-    padding: 0;
-}
-
-.grid-container {
     display: flex;
-    flex-wrap: wrap;
-    width: 100vw;
+    align-items: center;
     height: 100vh;
-    border: 1px solid black
+    margin: 0;
+    background-color: #f0f0f0;
 }
 
-.grid-item {
-    width: calc(100% / 16);
-    height: calc(100% / 16);
-    box-sizing: border-box;
-    border: 1px solid white;
-    background-color: lightgray;
-    transition: background-color 0.2s ease;
-}
-
-#reset-button {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
+#grid-container:
