--- a/style.css
+++ b/style.css
@@ -15,3 +15,11 @@ body {
     height: 80%;
     max-height: 800px;
 }
+
+.grid-item {
+    width: calc(100% / 16 - 2px);
+    height: calc(100% / 16 - 2px);
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
